--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-js-hw-10-food-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "homepage": "https://dukadima.github.io/goit-js-hw-12-countries",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url /goit-js-hw-12-countries/",
-    "deploy": "gh-pages -d dist"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/DukaDima/goit-js-hw-12-countries.git"
   },
-  "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/DukaDima/goit-js-hw-12-countries/issues"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.5",
-    "posthtml-include": "^1.4.3",
-    "sass": "^1.26.9"
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "posthtml-include": "^1.7.1",
+    "sass": "^1.35.1"
   }
 }
