--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://dukadima.github.io/goit-js-hw-12-countries",
+  "homepage": "https://dukadima.github.io/goit-js-hw-12-countries/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
@@ -25,5 +25,8 @@
     "parcel-bundler": "^1.12.5",
     "posthtml-include": "^1.4.3",
     "sass": "^1.26.9"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8"
   }
 }
