--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
+    "@pnotify/core": "^5.2.0",
     "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.5",
+    "pnotify": "^5.2.0",
     "posthtml-include": "^1.4.3",
     "sass": "^1.26.9"
   },
   "dependencies": {
+    "handlebars": "^4.7.7",
     "lodash.debounce": "^4.0.8"
   }
 }
