--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "handlebars": "^4.7.7",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "parcel-plugin-handlebars-precompile": "^1.0.2"
   }
 }
