--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://dukadima.github.io/goit-js-hw-12-countries/",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-12-countries/",
     "predeploy": "npm run build -- --public-url /goit-js-hw-12-countries/",
     "deploy": "gh-pages -d dist"
   },
